# WorldLoom

./: .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  sync-hf-space.yml
docs/: api.md  guide.md  index.md  models.md
docs/api/: factory.md  protocol.md  state.md  training.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/reference/: config.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/tutorials/: dreamer-vs-tdmpc2.md  train-first-model.md
examples/: collect_atari.py  collect_mujoco.py  train_atari_dreamer.py  train_dreamer.py  train_dreamer_mujoco.py  train_tdmpc2.py  train_tdmpc2_mujoco.py  visualize_imagination.py  worldloom_quickstart.ipynb
scripts/: create_demo_gif.py
spaces/: README.md  app.py
src/worldloom/core/: config.py
src/worldloom/models/tdmpc2/: __init__.py  dynamics.py  encoder.py  heads.py  world_model.py
src/worldloom/training/: trainer.py
src/worldmodels/: __init__.py  factory.py
src/worldmodels/core/: __init__.py  config.py  exceptions.py  latent_space.py  protocol.py  registry.py  state.py  trajectory.py
tests/: __init__.py  conftest.py  test_factory.py  test_training.py
tests/test_core/: test_latent_space.py  test_state.py
tests/test_integration/: test_world_models.py
tests/test_models/: test_dreamer.py  test_tdmpc2.py
