[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldloom"
version = "0.1.0"
description = "Unified SDK for latent world models (DreamerV3, TD-MPC2, V-JEPA)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "WorldLoom Contributors"}
]
keywords = ["world-models", "reinforcement-learning", "dreamer", "td-mpc", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
training = [
    "tqdm>=4.0.0",
]
env = [
    "gymnasium>=0.29.0",
]
logging = [
    "wandb>=0.15.0",
]
all = [
    "worldloom[dev,training,env,logging]",
]

[project.urls]
Homepage = "https://github.com/yoshihyoda/worldloom"
Documentation = "https://worldloom.readthedocs.io"
Repository = "https://github.com/yoshihyoda/worldloom"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Too noisy for nn.Sequential returns
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "worldloom.models.dreamer.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "worldloom.models.tdmpc2.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "worldloom.training.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N812",   # Lowercase functional imported as F (PyTorch convention)
    "W293",   # Blank line contains whitespace (in docstrings)
]
