[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldloom"
version = "0.1.0"
description = "Unified Python interface for world models in reinforcement learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "WorldLoom Contributors"}
]
keywords = [
    "world-models",
    "reinforcement-learning",
    "dreamer",
    "dreamerv3",
    "td-mpc",
    "td-mpc2",
    "robotics",
    "model-based-rl",
    "latent-dynamics",
    "imagination",
    "rssm",
    "planning",
    "atari",
    "mujoco",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
training = [
    "tqdm>=4.0.0",
]
env = [
    "gymnasium>=0.29.0",
]
atari = [
    "gymnasium[atari]>=0.29.0",
    "ale-py>=0.8.0",
    "opencv-python>=4.0.0",
]
mujoco = [
    "gymnasium[mujoco]>=0.29.0",
    "mujoco>=3.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
]
logging = [
    "wandb>=0.15.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0.0",
]
all = [
    "worldloom[dev,training,env,atari,viz,logging,docs]",
]

[project.urls]
Homepage = "https://github.com/worldloom/WorldLoom"
Documentation = "https://worldloom.readthedocs.io"
Repository = "https://github.com/worldloom/WorldLoom"
Changelog = "https://github.com/worldloom/WorldLoom/blob/main/CHANGELOG.md"
Issues = "https://github.com/worldloom/WorldLoom/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Too noisy for nn.Sequential returns
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "worldloom.models.dreamer.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "worldloom.models.tdmpc2.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "worldloom.training.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N812",   # Lowercase functional imported as F (PyTorch convention)
    "W293",   # Blank line contains whitespace (in docstrings)
]
